# ShaScannerAV

./: Cargo.toml  README.md  hashes.txt
src/: main.rs
